--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "React Redux Express MongoDB Application",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "env NODE_ENV=development webpack-dev-server --config ./webpack.config.babel.js --progress --colors",
+    "build": "env NODE_ENV=production webpack --config ./webpack.config.babel.js --colors",
+    "test": "jest"
   },
   "author": "Colin Smith",
   "license": "MIT",
@@ -49,7 +51,8 @@
     "node-sass": "^4.5.0",
     "postcss-loader": "^1.3.1",
     "prepush": "^3.1.11",
-    "react-hot-loader": "^1.3.1",
+    "react-addons-shallow-compare": "^15.4.2",
+    "react-hot-loader": "3.0.0-beta.6",
     "redux-devtools": "^3.3.2",
     "redux-devtools-dock-monitor": "^1.1.1",
     "redux-devtools-log-monitor": "^1.2.0",
