--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
   "main": "index.js",
   "scripts": {
     "start-dev": "env NODE_ENV=development babel-node server.js --colors",
-    "start-dev-test": "env NODE_ENV=development webpack-dev-server --config ./webpack.config.babel.js --progress --colors && babel-node server.js",
-    "build": "env NODE_ENV=production webpack --config ./webpack.config.babel.js --colors",
-    "start-prod": "build && babel-node server.js",
+    "build": "rm -rf dist && env NODE_ENV=production webpack --config ./webpack.config.babel.js --colors",
+    "start-prod": "rm -rf dist && env NODE_ENV=production webpack -p --config ./webpack.config.babel.js --colors && babel-node server.js",
     "test": "jest",
     "populate": "babel-node ./src/populate.js"
   },
   "author": "Colin Smith",
   "license": "MIT",
   "dependencies": {
+    "babel-polyfill": "^6.23.0",
     "express": "^4.14.1",
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^6.7.4",
+    "autoprefixer-loader": "^3.2.0",
     "babel-cli": "^6.23.0",
     "babel-core": "^6.23.1",
     "babel-eslint": "^7.1.1",
@@ -37,7 +38,6 @@
     "babel-plugin-transform-class-properties": "^6.23.0",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.23.0",
     "babel-preset-latest": "^6.22.0",
     "babel-preset-react": "^6.23.0",
     "babel-preset-stage-0": "^6.22.0",
@@ -49,7 +49,7 @@
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-jsx-a11y": "^4.0.0",
     "eslint-plugin-react": "^6.10.0",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "^2.0.0",
     "file-loader": "^0.10.0",
     "html-webpack-plugin": "^2.28.0",
     "jest": "^19.0.0",
@@ -62,8 +62,10 @@
     "redux-devtools-dock-monitor": "^1.1.1",
     "redux-devtools-log-monitor": "^1.2.0",
     "redux-logger": "^2.8.1",
+    "rimraf": "^2.6.1",
     "sass-loader": "^6.0.2",
     "sinon": "^1.17.7",
+    "style-loader": "^0.13.2",
     "url-loader": "^0.5.7",
     "webpack": "^2.2.1",
     "webpack-dashboard": "^0.3.0",
